Add DPO dataset generation notebook

--- a/code_snippets/synthetic_dataset_generation.ipynb
+++ b/code_snippets/synthetic_dataset_generation.ipynb
@@ -50,23 +50,30 @@
     "\n",
     "def extract_substrings(dataset: Dataset, min_length: int = 1000, max_length: int = 2000) -> List[str]:\n",
     "    extracts = []\n",
+    "\n",
+    "    # To make sure that the splitting doesn't break sentences, which could modify their meanings\n",
+    "    # Use a regex to only split after the end of a sentence.\n",
     "    sentence_pattern = r\"(?<!\\w\\.\\w.)(?<![A-Z][a-z]\\.)(?<=\\.|\\?|\\!)\\s\"\n",
     "    for article in dataset[\"content\"]:\n",
     "        cleaned_article = clean_text(article)\n",
     "        sentences = re.split(sentence_pattern, cleaned_article)\n",
+    "\n",
     "        current_chunk = \"\"\n",
     "        for sentence in sentences:\n",
     "            sentence = sentence.strip()\n",
     "            if not sentence:\n",
     "                continue\n",
+    "\n",
     "            if len(current_chunk) + len(sentence) <= max_length:\n",
     "                current_chunk += sentence + \" \"\n",
     "            else:\n",
     "                if len(current_chunk) >= min_length:\n",
     "                    extracts.append(current_chunk.strip())\n",
     "                current_chunk = sentence + \" \"\n",
+    "\n",
     "        if len(current_chunk) >= min_length:\n",
     "            extracts.append(current_chunk.strip())\n",
+    "\n",
     "    return extracts"
    ]
   },
@@ -79,12 +86,16 @@
     "class InstructionAnswerSet:\n",
     "    def __init__(self, pairs: List[Tuple[str, str]]):\n",
     "        self.pairs = pairs\n",
+    "\n",
     "    @classmethod\n",
-    "    def from_json(cls, json_str: str) -> 'InstructionAnswerSet':\n",
+    "    def from_json(cls, json_str: str) -> \"InstructionAnswerSet\":\n",
     "        data = json.loads(json_str)\n",
-    "        pairs = [(pair['instruction'], pair['answer'])\n",
-    "                 for pair in data['instruction_answer_pairs']]\n",
+    "        pairs = [\n",
+    "            (pair[\"instruction\"], pair[\"answer\"])\n",
+    "            for pair in data[\"instruction_answer_pairs\"]\n",
+    "        ]\n",
     "        return cls(pairs)\n",
+    "\n",
     "    def __iter__(self):\n",
     "        return iter(self.pairs)"
    ]
@@ -98,33 +109,41 @@
     "def generate_instruction_answer_pairs(\n",
     "    extract: str, client: OpenAI\n",
     ") -> List[Tuple[str, str]]:\n",
-    "    prompt = f\"\"\"Based on the following extract, generate five instruction-answer pairs. Each instruction \\\n",
-    "must ask to write about a specific topic contained in the context. each answer \\\n",
-    "must provide a relevant paragraph based on the information found in the \\\n",
-    "context. Only use concepts from the context to generate the instructions. \\\n",
-    "Instructions must never explicitly mention a context, a system, a course, or an extract. \\\n",
-    "Instructions must be self-contained and general. \\\n",
-    "Answers must imitate the writing style of the context. \\\n",
-    "Example instruction: Explain the concept of an LLM Twin. \\\n",
-    "Example answer: An LLM Twin is essentially an AI character that mimics your writing style, personality, and voice. \\\n",
-    "It's designed to write just like you by incorporating these elements into a language model. \\\n",
-    "The idea is to create a digital replica of your writing habits using advanced AI techniques. \\\n",
+    "    prompt = f\"\"\"Based on the following extract, generate five instruction-answer pairs.\n",
+    "Each instruction must ask to write about a specific topic contained in the context.\n",
+    "Each answer must provide a relevant paragraph based on the information found in the context.\n",
+    "Only use concepts from the context to generate the instructions.\n",
+    "\n",
+    "Instructions must never explicitly mention a context, a system, a course, or an extract.\n",
+    "Instructions must be self-contained and general.\n",
+    "Answers must imitate the writing style of the context.\n",
+    "\n",
+    "Example instruction: Explain the concept of an LLM Twin.\n",
+    "Example answer: An LLM Twin is essentially an AI character that mimics your writing style, personality, and voice.\n",
+    "It's designed to write just like you by incorporating these elements into a language model.\n",
+    "The idea is to create a digital replica of your writing habits using advanced AI techniques.\n",
+    "\n",
     "Provide your response in JSON format with the following structure:\n",
     "{{\n",
     "    \"instruction_answer_pairs\": [\n",
-    "        {{\"instruction\": \"...\", \"answer\": \"...\"}},\n",
+    "        {{\n",
+    "            \"instruction\": \"...\",\n",
+    "            \"answer\": \"...\"\n",
+    "        }},\n",
     "        ...\n",
     "    ]\n",
     "}}\n",
-    "Extract:\n",
-    "{extract}\n",
+    "\n",
+    "    Extract:\n",
+    "    {extract}\n",
     "\"\"\"\n",
     "    # Specify a system prompt to guide the model into generating the expected instructions.\n",
     "    completion = client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        messages=[\n",
     "            {\n",
-    "                \"role\": \"system\", \"content\": \"You are a helpful assistant who \\\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are a helpful assistant who \\\n",
     "            generates instruction-answer pairs based on the given context. \\\n",
     "            Provide your response in JSON format.\",\n",
     "            },\n",
@@ -151,7 +170,9 @@
     "            executor.submit(generate_instruction_answer_pairs, extract, client)\n",
     "            for extract in extracts\n",
     "        ]\n",
-    "        for future in tqdm(concurrent.futures.as_completed(futures), total=len(futures)):\n",
+    "        for future in tqdm(\n",
+    "            concurrent.futures.as_completed(futures), total=len(futures)\n",
+    "        ):\n",
     "            instruction_answer_pairs.extend(future.result())\n",
     "\n",
     "    instructions, answers = zip(*instruction_answer_pairs)\n",
@@ -160,7 +181,7 @@
     "            \"instruction\": list(instructions),\n",
     "            \"output\": list(answers),\n",
     "        }\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
@@ -183,7 +204,7 @@
     "print(\"Raw dataset:\")\n",
     "print(raw_dataset.to_pandas())\n",
     "\n",
-    "# 2. Create instructiondataset\n",
+    "# 2. Create instruction dataset\n",
     "instruction_dataset = create_instruction_dataset(raw_dataset, client)\n",
     "print(\"Instruction dataset:\")\n",
     "print(instruction_dataset.to_pandas())\n",
